--- a/src/app/pieces/educational-objective/educational-objective.component.html
+++ b/src/app/pieces/educational-objective/educational-objective.component.html
@@ -12,6 +12,7 @@
    
     <div class="piece-form">
         <div class="piece-form-title">Objectif pédagogique</div>
+        <mat-icon class="piece-form-comment" fontIcon="comment" *ngIf="scenario.missions[i].comments.length > 0"></mat-icon>
         <div class="piece-form-objective">
             <label for="objective">Commun pour la mission 1</label>
             <textarea name="objective" [(ngModel)]="educationnalObjective.objective" placeholder="Comprendre les rôles impliqués dans la conception d'un site web"></textarea>
