--- a/src/app/pieces/role/role.component.html
+++ b/src/app/pieces/role/role.component.html
@@ -12,6 +12,7 @@
 
     <div class="piece-form">
         <div class="piece-form-title">Rôle 1</div>
+        <mat-icon class="piece-form-comment" fontIcon="comment" *ngIf="role.comments.length > 0"></mat-icon>
         <img src="../../../assets/background-images/role_opacity0.png"/>
         <div class="piece-form-intitule">
             <label for="intitule">Intitulé</label>
