--- a/src/app/pieces/tasks/repeat-task/repeat-task.component.scss
+++ b/src/app/pieces/tasks/repeat-task/repeat-task.component.scss
@@ -86,6 +86,13 @@
             height: 50%;
             font-size: 15px;
         }
+
+        &-comment {
+            transform: scale(1.2);
+            position: absolute;
+            bottom: 50px;
+            left: 35px;
+        }
     }
 }
 
