--- a/src/app/pieces/tasks/annexe-task/annexe-task.component.scss
+++ b/src/app/pieces/tasks/annexe-task/annexe-task.component.scss
@@ -231,6 +231,13 @@
                 margin-left: 10px;
             }
 
+            &-comment {
+                transform: scale(1.2);
+                position: absolute;
+                top: 25px;
+                right: 5%;
+            }
+
             &-symbol {
                 width: 50px;
                 height: 50px;
