--- a/src/app/pieces/tasks/random-event/random-event.component.scss
+++ b/src/app/pieces/tasks/random-event/random-event.component.scss
@@ -269,6 +269,13 @@
                 margin-left: 10px;
             }
 
+            &-comment {
+                transform: scale(1.2);
+                position: absolute;
+                top: 25px;
+                right: 25%;
+            }
+
             &-symbol {
                 width: 50px;
                 height: 50px;
