--- a/src/app/sider-pieces/interupt/interupt.component.html
+++ b/src/app/sider-pieces/interupt/interupt.component.html
@@ -7,7 +7,7 @@
             </div>
         </div>
         <div class="piece-form-textarea">
-            <textarea></textarea>
+            <textarea [(ngModel)]="task.interrupt"></textarea>
         </div>    
     </div>
 </div>
