--- a/src/app/sider-pieces/supplementary-task/supplementary-task.component.scss
+++ b/src/app/sider-pieces/supplementary-task/supplementary-task.component.scss
@@ -4,7 +4,7 @@
     width: 300px;
     height: 100px;
     position: relative;
-    background: linear-gradient(165deg, rgba(154,213,236,1) 0%, rgba(154,213,236,1) 55%, rgba(0,0,0,1) 55%, rgba(0,0,0,1) 100%);
+    //background: linear-gradient(165deg, rgba(154,213,236,1) 0%, rgba(154,213,236,1) 55%, rgba(0,0,0,1) 55%, rgba(0,0,0,1) 100%);
     border: solid black 1px;
     border-radius: 10px;
 
@@ -23,7 +23,7 @@
         }
 
         &-select {
-            margin-top: 5px;
+            margin-top: 15px;
             margin-left: 10px;
             width: 100%;
 
