--- a/src/app/pieces/tasks/repeat-task/repeat-task.component.scss
+++ b/src/app/pieces/tasks/repeat-task/repeat-task.component.scss
@@ -91,7 +91,28 @@
             transform: scale(1.2);
             position: absolute;
             bottom: 50px;
-            left: 35px;
+            left: 50px;
+        }
+
+        &-repeat {
+            transform: scale(1.2);
+            position: absolute;
+            bottom: 50px;
+            left: 100px;
+        }
+
+        &-character {
+            transform: scale(1.2);
+            position: absolute;
+            bottom: 50px;
+            left: 150px;
+        }
+
+        &-interrupt {
+            transform: scale(1.2);
+            position: absolute;
+            bottom: 50px;
+            left: 200px;
         }
     }
 }
