--- a/src/app/sider-pieces/role-occurence/role-occurence.component.html
+++ b/src/app/sider-pieces/role-occurence/role-occurence.component.html
@@ -1,28 +1,17 @@
 <div class="piece">
     <div class="piece-form">
         <div class="piece-title">Occurrence du rôle</div>
-        <div class="piece-form-occurrence">
+        <div class="piece-form-occurrence" *ngFor="let occurence of role.occurences, let i = index">
             <div class="piece-form-occurrence-text">
-                <input type="text"/>
+                <input type="text" [(ngModel)]="occurence.iteration"/>
                 <label> entre </label>
-                <input type="text"/>
+                <input type="text" [(ngModel)]="occurence.min"/>
                 <label> et </label>
-                <input type="text"/>
+                <input type="text" [(ngModel)]="occurence.max"/>
                 <label> joueurs</label>  
             </div>
-            <button mat-button><mat-icon fontIcon="remove"></mat-icon></button>
+            <button mat-button (click)="removeOccurrence(i)"><mat-icon fontIcon="remove"></mat-icon></button>
         </div>
-        <div class="piece-form-occurrence">
-            <div class="piece-form-occurrence-text">
-                <input type="text"/>
-                <label> entre </label>
-                <input type="text"/>
-                <label> et </label>
-                <input type="text"/>
-                <label> joueurs</label>  
-            </div>
-            <button mat-button><mat-icon fontIcon="remove"></mat-icon></button>
-        </div>
-        <button mat-button class="piece-form-add"><mat-icon fontIcon="add"></mat-icon></button>
+        <button mat-button class="piece-form-add" (click)="addOccurrence()"><mat-icon fontIcon="add"></mat-icon></button>
     </div>
 </div>
