--- a/src/app/pieces/tasks/final-task/final-task.component.scss
+++ b/src/app/pieces/tasks/final-task/final-task.component.scss
@@ -103,7 +103,7 @@
         background-color: #f7f7f7;
         z-index: -1;
         bottom: 10px;
-        left: 50px;
+        left: 45px;
         border: solid black 1px;
         border-top-right-radius: 10px;
         border-bottom-right-radius: 10px;
@@ -202,6 +202,7 @@
             border-right: solid black 1px;
             width: 40px;
             height: 40px;
+            background-color: var(--background-color);
             transform: translateY(-50%) rotate(45deg);
             position: absolute;
             left: -20px;
@@ -233,7 +234,6 @@
             resize: none;
             flex-grow: 1;
             font-size: 15px;
-            background-image: url("../../../../assets/background-images/final.png");
             background-position: center;
             background-repeat: no-repeat;
             background-size: 100px;
