add background-image to optionnal and repeat tasks

--- a/src/app/pieces/tasks/optionnal-task/optionnal-task.component.scss
+++ b/src/app/pieces/tasks/optionnal-task/optionnal-task.component.scss
@@ -245,6 +245,9 @@
             resize: none;
             flex-grow: 1;
             font-size: 15px;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: 100px;
         }
 
         select {
