--- a/src/app/pieces/tasks/repeat-task/repeat-task.component.scss
+++ b/src/app/pieces/tasks/repeat-task/repeat-task.component.scss
@@ -81,37 +81,41 @@
         textarea {
             width: 80%;
             border: none;
-            border-radius: 10px;
+            border-radius: 20px;
             resize: none;
             height: 50%;
             font-size: 15px;
+            padding: 10px;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: 100px;
         }
 
         &-comment {
             transform: scale(1.2);
             position: absolute;
-            bottom: 50px;
+            bottom: 35px;
             left: 50px;
         }
 
         &-repeat {
             transform: scale(1.2);
             position: absolute;
-            bottom: 50px;
+            bottom: 35px;
             left: 100px;
         }
 
         &-character {
             transform: scale(1.2);
             position: absolute;
-            bottom: 50px;
+            bottom: 35px;
             left: 150px;
         }
 
         &-interrupt {
             transform: scale(1.2);
             position: absolute;
-            bottom: 50px;
+            bottom: 35px;
             left: 200px;
         }
     }
