add icons white background

--- a/src/app/pieces/game-educationnal-objective/game-educationnal-objective.component.scss
+++ b/src/app/pieces/game-educationnal-objective/game-educationnal-objective.component.scss
@@ -82,6 +82,9 @@
             position: absolute;
             top: 25px;
             right: 5%;
+            background-color: white;
+            padding: 4px;
+            border-radius: 50%;
         }
 
         &-objective{
