--- a/src/app/pieces/role/role.component.scss
+++ b/src/app/pieces/role/role.component.scss
@@ -136,6 +136,9 @@
             right: 30%;
             top: 25px;
             transform: scale(1.2);
+            background-color: white;
+            padding: 4px;
+            border-radius: 50%;
         }
 
         &-intitule {
