--- a/src/app/pieces/tasks/random-event/random-event.component.scss
+++ b/src/app/pieces/tasks/random-event/random-event.component.scss
@@ -269,15 +269,21 @@
             &-comment {
                 transform: scale(1.2);
                 position: absolute;
-                top: 20px;
+                top: 8px;
                 right: 25%;
+                border-radius: 50%;
+                background-color: white;
+                padding: 4px;
             }
 
             &-repeat {
                 transform: scale(1.2);
                 position: absolute;
-                top: 45px;
+                top: 42px;
                 right: 25%;
+                border-radius: 50%;
+                background-color: white;
+                padding: 4px;
             }
 
             &-symbol {
@@ -343,6 +349,9 @@
                 position: absolute;
                 right: 41%;
                 bottom: 25px;
+                border-radius: 50%;
+                background-color: white;
+                padding: 4px;
             }
 
             &-character {
@@ -350,6 +359,9 @@
                 position: absolute;
                 left: 40%;
                 bottom: 25px;
+                border-radius: 50%;
+                background-color: white;
+                padding: 4px;
             }
         }
     }
