--- a/src/app/pieces/tasks/repeat-task/repeat-task.component.scss
+++ b/src/app/pieces/tasks/repeat-task/repeat-task.component.scss
@@ -96,6 +96,9 @@
             position: absolute;
             bottom: 35px;
             left: 50px;
+            background-color: white;
+            padding: 4px;
+            border-radius: 50%;
         }
 
         &-repeat {
@@ -103,6 +106,9 @@
             position: absolute;
             bottom: 35px;
             left: 100px;
+            background-color: white;
+            padding: 4px;
+            border-radius: 50%;
         }
 
         &-character {
@@ -110,6 +116,9 @@
             position: absolute;
             bottom: 35px;
             left: 150px;
+            background-color: white;
+            padding: 4px;
+            border-radius: 50%;
         }
 
         &-interrupt {
@@ -117,6 +126,9 @@
             position: absolute;
             bottom: 35px;
             left: 200px;
+            background-color: white;
+            padding: 4px;
+            border-radius: 50%;
         }
     }
 }
